--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="tutorial-content">
                     <h3>Властивості трансформації</h3>
                     <p>Досліджуйте масштабування, обертання, переміщення та нахил.</p>
-                    <a href="tutorials/transform.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
+                    <a href="tutorials/transitions.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="tutorial-card">
@@ -120,7 +120,7 @@
                 <div class="tutorial-content">
                     <h3>Функції часу</h3>
                     <p>Контролюйте темп ваших анімацій за допомогою функцій пом'якшення.</p>
-                    <a href="tutorials/timing.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
+                    <a href="tutorials/transitions.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
