--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -68,7 +68,7 @@
                             <li>Налаштування часу та повторення</li>
                             <li>Складні анімаційні послідовності</li>
                         </ul>
-                        <a href="transitions.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
+                        <a href="keyframes.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
 
@@ -113,7 +113,7 @@
                             <li>Анімація при прокрутці</li>
                             <li>Оптимізація продуктивності</li>
                         </ul>
-                        <a href="transitions.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
+                        <a href="advanced.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
 
@@ -128,7 +128,7 @@
                             <li>Інтеграція з JavaScript</li>
                             <li>Анімаційні події</li>
                         </ul>
-                        <a href="transitions.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
+                        <a href="interactive.html" class="tutorial-link">Почати урок <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                     <div class="video-info">
                         <h3>Анімації з ключовими кадрами</h3>
                         <p>Тривалість: 18:37</p>
-                        <a href="transitions.html" class="video-link">Дивитися урок</a>
+                        <a href="keyframes.html" class="video-link">Дивитися урок</a>
                     </div>
                 </div>
 
